Made minimum Java language version 21